--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -10,10 +10,14 @@
 .nav-item{
 	color: 'white';
 	text-decoration: none;
-	font-size: 20px;
+	font-size: 22px;
 	padding: 8px;
 	height: 50px;
 	margin: 18px;
+}
+
+.nav-item:hover{
+	transform: scale(1.2);
 }
 
 .icon:hover{
