--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -1,3 +1,13 @@
+p{
+	font-size: 16px !important;
+	text-align: justify;
+}
+
+h1, h2{
+	font-size: 30px;
+	text-align: center;
+}
+
 .content-login{
 	margin-top: 170px;
 }
